Rewrite English documents (#147)